fix: GitHub Pages CSS path

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="./index.css">
 </head>
 <body class="antialiased overflow-hidden h-screen flex flex-col selection:bg-brand-mint selection:text-black">
     <div id="root"></div>
