--- a/news-radar.html
+++ b/news-radar.html
@@ -140,7 +140,7 @@ html,body{height:100%;background:var(--bg);color:var(--text);font-family:-apple-
 </div>
 <div class="toast" id="toast"></div>
 <script>
-var BRAVE_KEY='BSArQjSpzjH7zbdVh4Arpx0dVzPYGxp';
+var PROXY='https://notion-proxy.marcoaquilino.workers.dev';
 var allNews=[],activeFilter={src:'all',topic:null,query:''},lastLoad=null;
 
 function pad(n){return String(n).padStart(2,'0')}
@@ -206,7 +206,7 @@ var TSTYLES={
 };
 
 async function fetchReddit(sub){
-  var r=await fetch('https://www.reddit.com/r/'+sub+'/hot.json?limit=15',{headers:{'User-Agent':'Frank/1.0'}});
+  var r=await fetch(PROXY+'/reddit?sub='+sub+'&limit=15');
   if(!r.ok)throw new Error('Reddit '+sub+' '+r.status);
   var data=await r.json();
   return(data.data&&data.data.children||[]).filter(function(p){return !p.data.stickied}).map(function(p){
@@ -218,8 +218,7 @@ async function fetchReddit(sub){
   });
 }
 async function fetchBrave(query){
-  var url='https://api.search.brave.com/res/v1/web/search?q='+encodeURIComponent(query)+'&count=12&freshness=pd';
-  var r=await fetch(url,{headers:{'Accept':'application/json','Accept-Encoding':'gzip','X-Subscription-Token':BRAVE_KEY}});
+  var r=await fetch(PROXY+'/brave?q='+encodeURIComponent(query)+'&count=12&freshness=pd');
   if(!r.ok)throw new Error('Brave '+r.status);
   var data=await r.json();
   return((data.web&&data.web.results)||[]).map(function(w){
