--- a/news-radar.html
+++ b/news-radar.html
@@ -242,6 +242,18 @@ a{color:inherit;text-decoration:none}
 </div>
 <div class="toast" id="toast"></div>
 <script>var PROXY='https://notion-proxy.marcoaquilino.workers.dev';
+var tabs={
+  global:{label:'Global',badge:'GLOBAL',badgeClass:'global',loaded:false,items:[],sources:[],srcLabels:{}},
+  brasil:{label:'Brasil',badge:'BR',badgeClass:'br',loaded:false,items:[],sources:[],srcLabels:{}},
+  tech:  {label:'Tech/AI',badge:'TECH',badgeClass:'tech',loaded:false,items:[],sources:[],srcLabels:{}},
+  crypto:{label:'Cripto',badge:'CRIPTO',badgeClass:'crypto',loaded:false,items:[],sources:[],srcLabels:{}},
+};
+var activeTab='global';
+var activeFilter={src:'all',topic:null,query:''};
+var activeSort='smart';
+var currentDrawerItem=null;
+var frankCache={};
+var lastLoad={};
 function pad(n){return String(n).padStart(2,'0')}
 function esc(s){return String(s||'').replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;')}
 function fmtScore(n){return n>=1000?(n/1000).toFixed(1)+'k':String(n)}
