chore: cache bust v3

--- a/news-radar.html
+++ b/news-radar.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Radar de Noticias — Marco OS</title>
+<title>Radar de Noticias v3 — Marco OS</title>
 <style>*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
 :root{
   --bg:#111;--bg2:#1a1a1a;--bg3:#222;--bg4:#252525;
