--- a/news-radar.html
+++ b/news-radar.html
@@ -102,8 +102,7 @@ a{color:inherit;text-decoration:none}
 .hero-card.rising{border-left-color:var(--yellow)}
 .hero-card.notable{border-left-color:var(--blue)}
 .hero-inner{display:flex;gap:0;align-items:stretch}
-.hero-thumb{width:100px;flex-shrink:0;overflow:hidden;display:flex;align-items:center;justify-content:center;background:var(--bg3)}
-.hero-thumb img{width:100%;height:100%;object-fit:cover;display:block}
+.hero-thumb{width:100px;height:auto;min-height:72px;flex-shrink:0;overflow:hidden;display:flex;align-items:center;justify-content:center;background:transparent}
 .hero-body{flex:1;padding:16px 18px;min-width:0}
 .hero-eyebrow{display:flex;align-items:center;gap:8px;margin-bottom:8px;flex-wrap:wrap}
 .hero-topic{font-size:10px;font-weight:700;text-transform:uppercase;letter-spacing:.07em}
@@ -117,9 +116,8 @@ a{color:inherit;text-decoration:none}
 .grid-card:hover{background:#1d1d1d;border-color:var(--sep2)}
 .grid-card.hot .grid-thumb-wrap::after{content:'HOT';position:absolute;top:7px;left:7px;background:var(--red);color:#fff;font-size:9px;font-weight:800;padding:2px 6px;border-radius:4px;letter-spacing:.05em}
 .grid-card.rising .grid-thumb-wrap::after{content:'RISING';position:absolute;top:7px;left:7px;background:var(--yellow);color:#111;font-size:9px;font-weight:800;padding:2px 6px;border-radius:4px;letter-spacing:.05em}
-.grid-thumb-wrap{position:relative;height:110px;overflow:hidden;background:var(--bg3);flex-shrink:0}
-.grid-thumb-wrap img,.grid-thumb-wrap div{width:100%;height:100%}
-.grid-thumb-wrap img{object-fit:cover;display:block}
+.grid-thumb-wrap{position:relative;height:110px;overflow:hidden;background:transparent;flex-shrink:0;display:flex;align-items:center;justify-content:center}
+.grid-thumb-wrap>div{width:100%!important;height:110px!important;border-radius:0!important;font-size:28px!important}
 .grid-body{padding:11px 12px;flex:1;display:flex;flex-direction:column;gap:5px}
 .grid-eyebrow{display:flex;align-items:center;gap:5px}
 .grid-src{font-size:10px;color:var(--dim2);flex:1;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
@@ -916,7 +914,7 @@ function switchTab(t){
   document.querySelectorAll('.sort-btn').forEach(function(el){el.classList.remove('active')});
   document.getElementById('sort-smart').classList.add('active');
   var meta=TAB_META[t];
-  document.getElementById('h-title').innerHTML=meta.title+' <span class="h-badge '+meta.badgeClass+'" id="h-badge">'+meta.badge+'</span>'+meta.badgeClass+'" id="h-badge">'+meta.badge+'</span>';
+  document.getElementById('h-title').innerHTML=meta.title+' <span class="h-badge '+meta.badgeClass+'" id="h-badge">'+meta.badge+'</span>';
   document.getElementById('h-sub').innerHTML=meta.sub+' &middot; <span id="last-update">'+(lastLoad[t]?'Agora':'&mdash;')+'</span>';
   loadTab();
 }
@@ -1223,61 +1221,31 @@ async function bgRefreshOtherTabs(){
 setInterval(bgRefreshOtherTabs, CACHE_TTL);
 
 
-// ── THUMB CACHE (favicon + og image) ────────────────────────────────────────
-var thumbCache = {};
-function getThumb(item, cb) {
-  var id = item.id;
-  if (thumbCache[id] !== undefined) { cb(thumbCache[id]); return; }
-  // Reddit items: usa thumbnail se disponível (vem no item)
-  if (item.thumb && item.thumb !== 'self' && item.thumb !== 'default' && item.thumb !== 'nsfw' && item.thumb.startsWith('http')) {
-    thumbCache[id] = item.thumb;
-    cb(item.thumb);
-    return;
-  }
-  // Tenta favicon via OG endpoint (async, não bloqueia render)
-  var host = '';
-  try { host = new URL(item.url || '').hostname; } catch(e) {}
-  if (!host) { thumbCache[id] = null; cb(null); return; }
-  var favUrl = 'https://www.google.com/s2/favicons?domain=' + host + '&sz=64';
-  thumbCache[id] = favUrl;
-  cb(favUrl);
-}
-
-// ── SOURCE AVATAR ────────────────────────────────────────────────────────────
+// ── COLORED AVATAR — zero external requests ──────────────────────────────────
+var AVATAR_PALETTE = [
+  ['#4ade80','#052e16'],['#60a5fa','#0c1a3a'],['#fb923c','#2d1200'],
+  ['#c084fc','#1e0938'],['#f87171','#2d0a0a'],['#fbbf24','#2a1800'],
+  ['#22d3ee','#052e2e'],['#a78bfa','#1a0e38'],['#34d399','#052e1a'],
+  ['#f472b6','#2d0a1e']
+];
 function srcAvatar(label) {
-  var colors = ['#4ade80','#60a5fa','#fb923c','#c084fc','#f87171','#fbbf24','#22d3ee'];
-  var idx = label.split('').reduce(function(a,c){return a+c.charCodeAt(0)},0) % colors.length;
-  return { color: colors[idx], letter: label.replace(/^r\//i,'').charAt(0).toUpperCase() || '?' };
+  var key = (label||'?').replace(/^r\//i,'').replace(/^www\./i,'');
+  var idx = key.split('').reduce(function(a,c){return(a*31+c.charCodeAt(0))&0xffff},0) % AVATAR_PALETTE.length;
+  var p = AVATAR_PALETTE[idx];
+  var letter = key.charAt(0).toUpperCase() || '?';
+  return { bg: p[0], fg: p[1], letter: letter };
 }
-
-// ── THUMB HTML ───────────────────────────────────────────────────────────────
 function thumbHtml(item, w, h, radius) {
-  var av = srcAvatar(item.label);
+  var av = srcAvatar(item.label || item.src || '?');
   var r = radius || '8px';
-  var ww = w || 56; var hh = h || 56;
-  var placeholder =
-    '<div style="width:'+ww+'px;height:'+hh+'px;border-radius:'+r+';background:'+av.color+
-    ';display:flex;align-items:center;justify-content:center;font-size:'+(ww>40?15:11)+
-    'px;font-weight:800;color:#111;flex-shrink:0">'+av.letter+'</div>';
-  if (item.thumb && item.thumb !== 'self' && item.thumb !== 'default' && item.thumb !== 'nsfw' && item.thumb.startsWith('http')) {
-    return '<img src="'+esc(item.thumb)+'" width="'+ww+'" height="'+hh+
-      '" style="border-radius:'+r+';object-fit:cover;flex-shrink:0;display:block" '+
-      'onerror="this.outerHTML=\''+placeholder.replace(/'/g,"\\'").replace(/\n/g,'')+'\'">';
-  }
-  var host = ''; try { host = new URL(item.url||'').hostname; } catch(e) {}
-  if (host) {
-    var fav = 'https://www.google.com/s2/favicons?domain='+host+'&sz=64';
-    if (ww >= 48) {
-      return '<div style="width:'+ww+'px;height:'+hh+'px;border-radius:'+r+
-        ';background:#222;display:flex;align-items:center;justify-content:center;flex-shrink:0;overflow:hidden">'+
-        '<img src="'+fav+'" width="32" height="32" style="border-radius:4px" '+
-        'onerror="this.parentElement.outerHTML=\''+placeholder.replace(/'/g,"\\'")+'\'"></div>';
-    }
-    return '<img src="'+fav+'" width="'+ww+'" height="'+hh+
-      '" style="border-radius:'+r+';object-fit:cover;flex-shrink:0;background:#222" '+
-      'onerror="this.outerHTML=\''+placeholder.replace(/'/g,"\\'")+'\'">'; 
-  }
-  return placeholder;
+  var ww = (typeof w === 'number') ? w : 56;
+  var hh = (typeof h === 'number') ? h : 56;
+  var fs = ww >= 80 ? 22 : ww >= 44 ? 15 : 11;
+  // 100% CSS — no image requests ever
+  return '<div style="width:'+ww+'px;height:'+hh+'px;min-width:'+ww+'px;border-radius:'+r+
+    ';background:'+av.bg+';display:flex;align-items:center;justify-content:center;'+
+    'font-size:'+fs+'px;font-weight:800;color:'+av.fg+';flex-shrink:0;user-select:none;'+
+    'letter-spacing:-.02em">'+av.letter+'</div>';
 }
 
 // ── CARD BUILDERS ────────────────────────────────────────────────────────────
@@ -1308,7 +1276,7 @@ function buildGridCard(item) {
   var card = document.createElement('div');
   card.className = 'grid-card ' + item.heat + (isRead(item.id) ? ' is-read' : '');
   card.innerHTML =
-    '<div class="grid-thumb-wrap">'+thumbHtml(item, '100%', 120, '6px 6px 0 0')+'</div>'+
+    '<div class="grid-thumb-wrap">'+thumbHtml(item, 200, 110, '0')+'</div>'+
     '<div class="grid-body">'+
     '<div class="grid-eyebrow">'+
     '<span class="grid-src">'+esc(item.label)+'</span>'+
